--- a/Resources/administration/src/app/component/form/sw-rule-modal/sw-rule-modal.scss
+++ b/Resources/administration/src/app/component/form/sw-rule-modal/sw-rule-modal.scss
@@ -1,5 +1,9 @@
 .sw-rule-modal {
-     .sw-condition-tree > .sw-condition-or-container >.sw-condition-or-container__condition-content {
-         padding: 0;
-     }
+    .sw-modal__body {
+        min-height: 700px;
+
+        .sw-condition-tree > .sw-condition-or-container >.sw-condition-or-container__condition-content {
+            padding: 0;
+        }
+    }
 }
