NEXT-2265 - Fix image asset issue in CMS

--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
@@ -84,7 +84,7 @@
 
         .sw-cms-detail__empty-stage {
             height: 400px;
-            margin: 50px 30px;
+            margin: 0 30px;
             display: grid;
             align-items: center;
             align-content: center;
