--- a/Resources/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.html.twig
@@ -1,6 +1,5 @@
 {% block sw_cms_element_image %}
     <div class="sw-cms-el-image" :class="classes">
-        <img :src="element.data.media.url | asset" v-if="element.data.media">
-        <img :src="'/administration/static/img/cms/preview_mountain_large.jpg' | asset" v-else>
+        <img :src="mediaUrl">
     </div>
 {% endblock %}
