NEXT-2692 - Add category salesChannel card and add missing fields

--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -32,8 +32,10 @@
             <router-view
                 v-if="!isLoading"
                 :category="category"
+                :cmsPage="cmsPage"
                 :mediaItem="mediaItem"
                 :isLoading="isLoading"
+                @sw-category-base-on-layout-change="onCmsLayoutChange"
                 @sw-category-base-on-open-sidebar="openSidebar"
                 @sw-category-base-on-set-media="setMediaItem"
                 @sw-category-base-on-upload-media="onUploadAdded"
