--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -100,7 +100,7 @@
         {% endblock %}
 
         {% block sw_sales_channel_detail_base_general_input_navigation %}
-            <sw-card :title="$tc('sw-sales-channel.detail.navigations')" :isLoading="salesChannel.isLoading">
+            <sw-card :title="$tc('sw-sales-channel.detail.navigation')" :isLoading="salesChannel.isLoading">
                 {% block sw_sales_channel_detail_base_general_input_navigation_category %}
                     <sw-select id="navigationCategoryId"
                                 class="sw-sales-channel-detail__select-navigation-category-id"
