--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
@@ -3,31 +3,33 @@
 
         {% block sw_category_detail_information %}
             <sw-card :title="$tc('sw-category.base.general.headlineInformationCard')" :isLoading="isLoading || isLoadingProducts">
-                {% block sw_category_detail_information_name %}
-                    <sw-field
-                        name="categoryName"
-                        class="sw-category-detail__base-name"
-                        v-model="category.name"
-                        validation="required"
-                        :label="$tc('sw-category.base.general.categoryNameLabel')"
-                        :placeholder="placeholder(category, 'name')">
-                    </sw-field>
-                {% endblock %}
 
                 <sw-container columns="repeat(auto-fit, minmax(150px, 1fr))" gap="0px 30px" class="sw-category-detail__info">
+                    {% block sw_category_detail_information_name %}
+                        <sw-field
+                            name="categoryName"
+                            class="sw-category-detail__base-name"
+                            v-model="category.name"
+                            validation="required"
+                            :label="$tc('sw-category.base.general.categoryNameLabel')"
+                            :placeholder="placeholder(category, 'name')">
+                        </sw-field>
+                    {% endblock %}
+
                     {% block sw_category_detail_information_active %}
                         <sw-field type="boolean" :label="$tc('sw-category.base.general.isCategoryActiveLabel')" name="categoryActive" v-model="category.active"></sw-field>
                     {% endblock %}
-                    {% block sw_category_detail_information_subcategories %}
-                        <sw-field
-                            class="sw-category-detail__base-subcategories"
-                            name="categoryShowSubcategories"
-                            type="boolean"
-                            :label="$tc('sw-category.base.general.showSubcategoryProductsLabel')"
-                            v-model="category.displayNestedProducts">
-                        </sw-field>
-                    {% endblock %}
                 </sw-container>
+
+                {% block sw_category_detail_information_subcategories %}
+                    <sw-field
+                        class="sw-category-detail__base-subcategories"
+                        name="categoryShowSubcategories"
+                        type="boolean"
+                        :label="$tc('sw-category.base.general.showSubcategoryProductsLabel')"
+                        v-model="category.displayNestedProducts">
+                    </sw-field>
+                {% endblock %}
 
                 <sw-container columns="repeat(auto-fit, minmax(150px, 1fr))" gap="0px 30px">
                     {% block sw_category_detail_information_link %}
@@ -55,17 +57,28 @@
             </sw-card>
         {% endblock %}
 
-        {% block sw_category_detail_mount %}
-            <sw-card class="sw-category-detail__base-mount" :title="$tc('sw-category.base.mount.title')" :isLoading="isLoading">
-                <p class="base-mount__text">{{ $tc('sw-category.base.mount.descriptionGeneral') }}</p>
-                <!-- @todo -->
-                <a class="base-mount__link" href="#">my-fashion.de</a>
-                <p class="base-mount__text">{{ $tc('sw-category.base.mount.descriptionMenu') }}</p>
+        {% block sw_category_detail_entry_point %}
+            <sw-card v-if="isSalesChannelEntryPoint()" class="sw-category-detail__base-entry-point" :title="$tc('sw-category.base.entry-point.title')" :isLoading="isLoading">
 
-                <div class="base-mount__options">
-                    <sw-field type="boolean" :label="$tc('sw-category.base.mount.useAsHomepage')"></sw-field>
-                    <sw-field type="boolean" :label="$tc('sw-category.base.mount.showHomepageAsMainMenuEntry')"></sw-field>
-                </div>
+                {% block sw_category_detail_entry_point_headline %}
+                    <p class="base-mount__text">{{ $tc('sw-category.base.entry-point.descriptionGeneral') }}</p>
+                {% endblock %}
+
+                {% block sw_category_detail_entry_point_list %}
+                    <div class="base-entry-point__sales-channels">
+                        {% block sw_category_detail_entry_point_list_link %}
+                            <router-link v-for="salesChannel in getCombinedSalesChannels()"
+                                :to="{ name: 'sw.sales.channel.detail.base', params: { id: salesChannel.id }}"
+                                class="base-entry-point__link">
+                                {{ salesChannel.name }}
+                            </router-link>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
+
+                {% block sw_category_detail_entry_point_description %}
+                    <p class="base-mount__text">{{ $tc('sw-category.base.entry-point.descriptionMenu') }}</p>
+                {% endblock %}
             </sw-card>
         {% endblock %}
 
@@ -73,7 +86,11 @@
             <sw-card class="sw-category-detail__menu" :title="$tc('sw-category.base.menu.title')" :isLoading="isLoading">
 
                 {% block sw_category_detail_menu_clickable %}
-                    <sw-field class="sw-category-detail__menu-clickable" type="boolean" :label="$tc('sw-category.base.menu.notClickable')"></sw-field>
+                    <sw-field class="sw-category-detail__menu-clickable" type="boolean" :label="$tc('sw-category.base.menu.useAsStructureCategory')"></sw-field>
+                {% endblock %}
+
+                {% block sw_category_detail_information_visibility %}
+                    <sw-field type="boolean" :label="$tc('sw-category.base.menu.hideInNavigation')"></sw-field>
                 {% endblock %}
 
                 {% block sw_category_detail_menu_media %}
@@ -102,14 +119,13 @@
                         :placeholder="$tc('sw-category.base.menu.description')">
                     </sw-field>
                 {% endblock %}
-
             </sw-card>
         {% endblock %}
 
         {% block sw_category_detail_layout %}
             <sw-card :title="$tc('sw-category.base.cms.title')" :isLoading="isLoading && cmsPages.length">
-                <div v-if="cmsPage" class="sw-category-detail__layout">
 
+                <div class="sw-category-detail__layout">
                     {% block sw_category_detail_layout_preview %}
                         <sw-cms-list-item :page="cmsPage"></sw-cms-list-item>
                     {% endblock %}
@@ -148,25 +164,8 @@
 
                         </div>
                     {% endblock %}
+
                 </div>
-            </sw-card>
-        {% endblock %}
-
-        {% block sw_category_detail_seo %}
-            <sw-card :title="$tc('sw-category.base.seo.title')" :isLoading="isLoading">
-
-                {% block sw_category_detail_seo_name %}
-                    <sw-field :label="$tc('sw-category.base.seo.title')" :placeholder="$tc('sw-category.base.seo.title')"></sw-field>
-                {% endblock %}
-
-                {% block sw_category_detail_seo_description %}
-                    <sw-field type="textarea" :label="$tc('sw-category.base.seo.description')" :placeholder="$tc('sw-category.base.seo.description')"></sw-field>
-                {% endblock %}
-
-                {% block sw_category_detail_seo_preview %}
-                    <div class="sw-category-detail__seo-preview"></div>
-                {% endblock %}
-
             </sw-card>
         {% endblock %}
 
